--- a/01_Extender/documentation/01_specification.html
+++ b/01_Extender/documentation/01_specification.html
@@ -1,9 +1,9 @@
 <html>
 <title>Extender</title>
 <body>
-<h1>Name:</h1> Extender.<br>
+<h1>Extender.</h1>
 <hr>
-Revision: 20090505
+Revision: 20090506
 <hr>
 <h1>Description:</h1>The extender provides an elongated connection to the Rabulab 19" rack back panel bus.<br>
 <p>
