Added a column with netnames.

--- a/01_Extender/documentation/01_back_plane_connector_pins.html
+++ b/01_Extender/documentation/01_back_plane_connector_pins.html
@@ -10,38 +10,38 @@ Revision: 20090506
 <p>
 
 <table border>
-<tr><td>Pin#</td><td>Description</td></tr>
-<tr><td>1</td><td>Multiplexer output</td></tr>
-<tr><td>2</td><td>Storage register output</td></tr>
-<tr><td>3</td><td>dB output</td></tr>
-<tr><td>4</td><td>Noise Generator output</td></tr>
-<tr><td>5</td><td>Random Function Generator output</td></tr>
-<tr><td>6</td><td>AM output</td></tr>
-<tr><td>7</td><td>Burst Generator output</td></tr>
-<tr><td>8</td><td>Sweep Generator output</td></tr>
-<tr><td>9</td><td>Function Generator output</td></tr>
-<tr><td>10</td><td>Amplitude output</td></tr>
-<tr><td>11</td><td>Function Generator zero crossing</td></tr>
-<tr><td>12</td><td>Sweep synchronisation</td></tr>
-<tr><td>13</td><td>Burst synchronisation</td></tr>
-<tr><td>14</td><td>Decimal Point code</td></tr>
-<tr><td>15</td><td>Channel doubleing</td></tr>
-<tr><td>16</td><td>Multiplexer clock</td></tr>
-<tr><td>17</td><td>Multiplexer reset</td></tr>
-<tr><td>18</td><td>+/- inhibit</td></tr>
-<tr><td>19</td><td>Digital Meter input</td></tr>
-<tr><td>20</td><td>Digital Meter common</td></tr>
-<tr><td>21</td><td>LED Meter input</td></tr>
-<tr><td>22</td><td>LED Meter common</td></tr>
-<tr><td>23</td><td>-Uvar</td></tr>
-<tr><td>24</td><td>+Uvar</td></tr>
-<tr><td>25</td><td>+U</td></tr>
-<tr><td>26</td><td>-U</td></tr>
-<tr><td>27</td><td>230VAC_F</td></tr>
-<tr><td>28</td><td>230VAC_N</td></tr>
-<tr><td>29</td><td>-15VDC</td></tr>
-<tr><td>30</td><td>GND</td></tr>
-<tr><td>31</td><td>+15VDC</td></tr>
+<tr><td>Pin#</td><td>Netname</td><td>Description</td></tr>
+<tr><td>1</td><td>MUX_OUT</td><td>Multiplexer output</td></tr>
+<tr><td>2</td><td>REG_OUT</td><td>Storage register output</td></tr>
+<tr><td>3</td><td>DB_OUT</td><td>dB output</td></tr>
+<tr><td>4</td><td>NOISE_OUT</td><td>Noise Generator output</td></tr>
+<tr><td>5</td><td>RFUNCGEN_OUT</td><td>Random Function Generator output</td></tr>
+<tr><td>6</td><td>AM_OUT</td><td>AM output</td></tr>
+<tr><td>7</td><td>BURST_OUT</td><td>Burst Generator output</td></tr>
+<tr><td>8</td><td>SWEEP_OUT</td><td>Sweep Generator output</td></tr>
+<tr><td>9</td><td>FUNC_OUT</td><td>Function Generator output</td></tr>
+<tr><td>10</td><td>AMPL_OUT</td><td>Amplitude output</td></tr>
+<tr><td>11</td><td>FUNC_0CR</td><td>Function Generator zero crossing</td></tr>
+<tr><td>12</td><td>SWEEP_SYNC</td><td>Sweep synchronisation</td></tr>
+<tr><td>13</td><td>BURST_OUT</td><td>Burst synchronisation</td></tr>
+<tr><td>14</td><td>DP_CODE</td><td>Decimal Point code</td></tr>
+<tr><td>15</td><td>CH_DBL</td><td>Channel doubleing</td></tr>
+<tr><td>16</td><td>MUX_CLOCK</td><td>Multiplexer clock</td></tr>
+<tr><td>17</td><td>MUX_RESET</td><td>Multiplexer reset</td></tr>
+<tr><td>18</td><td>INHIBIT</td><td>+/- inhibit</td></tr>
+<tr><td>19</td><td>DM_IN</td><td>Digital Meter input</td></tr>
+<tr><td>20</td><td>DM_COMMON</td><td>Digital Meter common</td></tr>
+<tr><td>21</td><td>LM_IN</td><td>LED Meter input</td></tr>
+<tr><td>22</td><td>LM_COMMON</td><td>LED Meter common</td></tr>
+<tr><td>23</td><td>NEG_UVAR</td><td>-Uvar</td></tr>
+<tr><td>24</td><td>POS_UVAR</td><td>+Uvar</td></tr>
+<tr><td>25</td><td>POS_U</td><td>+U</td></tr>
+<tr><td>26</td><td>NEG_U</td><td>-U</td></tr>
+<tr><td>27</td><td>MAINS_230VAC_F</td><td>Mains supply 230 VAC phase</td></tr>
+<tr><td>28</td><td>MAINS_230VAC_N</td><td>Mains supply 230 VAC null</td></tr>
+<tr><td>29</td><td>POS_15VDC</td><td>-15 VDC</td></tr>
+<tr><td>30</td><td>GND</td><td>Ground</td></tr>
+<tr><td>31</td><td>NEG_15VDC</td><td>+15 VDC</td></tr>
 </table>
 <p>
 
